fixed footer clipping into search results in small display, and floated search bar over search results

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,19 +1,22 @@
 html, body {
 	height: 100%;
 	font-family: arial, sans-serif;
+	color: #5f6368;
 }
 
 nav {
-	height: 124px;
+	height: 122px;
 }
 
 #fixed-nav {
 	position: fixed;
 	display: flex;
 	justify-content: space-between;
-	margin-top: 20px;
+	padding: 20px 0 5px 0;
 	width: 100%;
-	min-width: 1100px
+	min-width: 1100px;
+	background: white;
+	z-index: 10;
 }
 
 #nav-links {
@@ -21,9 +24,9 @@ nav {
 	top: 62px;
 	padding-left: 158px;
 	border-bottom: 1px solid #ebebeb;
-	height: 58px;
+	height: 60px;
 	vertical-align: middle;
-	line-height: 12px;
+	line-height: 10px;
 }
 
 #nav-links > * {
@@ -104,6 +107,7 @@ a {
 	border: none;	
 	width: 537px;
 	font-size: 16px;
+	color: rgba(0,0,0,.87);
 }
 
 #google-apps::before {
@@ -182,10 +186,66 @@ footer {
 	bottom: 0;
 }
 
+main {
+	min-height: 200px;
+	padding-bottom: 62px;
+}
+
+main > * {
+	margin-left: 170px;
+	max-width: 600px;
+}
+
 #benchmark {
+	font-size: small;
+	line-height: 43px;
+	margin-bottom: 5px;
 }
 
 .search-result {
+	display: block;
+	margin-bottom: 26px;
+}
+
+.website-title {
+	margin: 0;
+	font-size: 18px;
+	color: #1a0dab;
+	line-height: 1.3;
+	font-weight: normal;
+}
+
+.website-url {
+	color: #006621;
+	font-size: 14px;
+	font-style: normal;
+	line-height: 1.4;
+}
+
+.website-options {
+	display: inline-block;
+	height: 12px;
+	width: 13px;
+}
+
+.website-options img {
+	transform: rotate(180deg);
+	height: 47%;
+	width: 65%;
+	margin: -4px 0 0 3px;
+	vertical-align: middle;
+}
+
+.website-description {
+	margin: 0;
+	line-height: 1.5;
+	word-wrap: break-word;
+	font-size: small;
+}
+
+.website-links a {
+	color: #1a0dab;
+	line-height: 1.5;
 }
 
 #related {
